Fixed z-index of photoset dots

--- a/assets/css/slick.theme.css
+++ b/assets/css/slick.theme.css
@@ -60,6 +60,7 @@
     left: 47%;
     width: auto;
     opacity: 0.6;
+    z-index: 6;
 }
 
 .slick-dots li {
